user can create glossary entry

--- a/app/views/glossaries/new.html.erb
+++ b/app/views/glossaries/new.html.erb
@@ -10,7 +10,7 @@
 
   <div>
     <%= f.label :definition %><br />
-    <%= f.text_field :definition, autocomplete: "definition" %>
+    <%= f.text_field :definition, autofocus: true, autocomplete: "definition" %>
   </div>
 
   <div class="actions">
