--- a/app/views/glossaries/index.html.erb
+++ b/app/views/glossaries/index.html.erb
@@ -1,3 +1,8 @@
 <h1>Glossary</h1>
 
-<%= link_to 'Add entry', new_glossary_path %>
+<% @glossaries.each do |glossary| %>
+  <div><%= glossary.term %> - <%= glossary.definition %></div>
+<% end %>
+
+<br />
+<%= link_to 'Create new entry', new_glossary_path %>
