--- a/app/views/glossaries/index.html.erb
+++ b/app/views/glossaries/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Glossary</h1>
 
 <% @glossaries.each do |glossary| %>
-  <div><%= glossary.term %> - <%= glossary.definition %></div>
+  <div><%= link_to glossary.term, glossary %> - <%= glossary.definition %></div>
 <% end %>
 
 <br />
