--- a/app/views/glossaries/show.html.erb
+++ b/app/views/glossaries/show.html.erb
@@ -5,4 +5,5 @@
 
 <%= link_to 'Show all terms', glossaries_path %>
 <%= link_to 'Edit', edit_glossary_path(@glossary) %>
+<%= link_to 'Delete', glossary_path(@glossary), method: :delete, data: { confirm: 'Are you certain you want to delete this?' } %>
 
