--- a/app/views/glossaries/new.html.erb
+++ b/app/views/glossaries/new.html.erb
@@ -1,4 +1,9 @@
 <h1>Glossary</h1>
+
+<% render_errors(@glossary).map do |errors| %>
+  <li><%= errors %></li>
+<% end %>
+
 <h2>Add an entry</h2>
 
 <%= render partial: "form", locals: {glossary: @glossary, submit_text: 'Add entry'} %>
