--- a/app/views/glossaries/new.html.erb
+++ b/app/views/glossaries/new.html.erb
@@ -1,10 +1,8 @@
 <h1>Glossary</h1>
 
-<% render_errors(@glossary).map do |errors| %>
-  <li><%= errors %></li>
-<% end %>
-
 <h2>Add an entry</h2>
+
+<%= render partial: "error_panel", locals: { errors: @glossary.errors } if @glossary.errors.any? %>
 
 <%= render partial: "form", locals: {glossary: @glossary, submit_text: 'Add entry'} %>
 
