--- a/app/views/glossaries/_form.html.erb
+++ b/app/views/glossaries/_form.html.erb
@@ -9,6 +9,11 @@
     <%= f.text_field :definition, autofocus: true, autocomplete: "definition" %>
   </div>
 
+  <div>
+    <%= f.label :label_list %><br />
+    <%= f.text_field :label_list %>
+  </div>
+
   <div class="actions">
     <%= f.submit submit_text %>
   </div>
