pass test for deleting labels

--- a/app/views/labels/show.html.erb
+++ b/app/views/labels/show.html.erb
@@ -6,3 +6,8 @@
     <li><%= link_to glossary.term, glossary_path(glossary) %></li>
   <% end %>
 </p>
+
+<%= link_to 'Edit', edit_label_path(@label) %>
+<%= link_to 'Delete', label_path(@label), method: :delete, data: { confirm: 'Are you certain you want to delete this?' } %>
+<br />
+<%= link_to 'Show all terms', glossaries_path %>
